--- a/src/docs/asciidoc/usage_guide.adoc
+++ b/src/docs/asciidoc/usage_guide.adoc
@@ -465,7 +465,7 @@ Arbitrary ints = Arbitrary.integer();
 // square(int) >= 0: OK, passed 1000 tests.
 Property.def("square(int) >= 0")
         .forAll(ints)
-        .suchThat(i -> (i * i) >= 0)
+        .suchThat(i -> i * i >= 0)
         .check()
         .assertIsSatisfied();
 ----
