--- a/src/docs/asciidoc/usage_guide.adoc
+++ b/src/docs/asciidoc/usage_guide.adoc
@@ -227,155 +227,6 @@ Callbacks may be registered on a Future at each point of time. These actions are
 Future<T> future = Future.of(...);
 ----
 
-==== Match
-Match is a Java switch on steroids (without the negative 'side effects'). Some characteristics of Match are:
-
-* it has a fluent API
-* it can be Function
-* it can be Value
-* it is able to match values, i.e. whenIs(Object) and whenIn(Object...)
-* it is able to match types, i.e. whenType(Class) and whenTypeIn(Class...)
-* it is able to match conditions, i.e. whenTrue(Function1)
-* it is able to match function applicability, i.e. whenApplicable(Function1)
-* results may be specified eagerly, i.e. then(value)
-* results may be obtained lazily, i.e. then(() -> value)
-* results may be derived from the context, i.e. then(object -> f(object))
-
-The Match API comes in two flavors, the MatchValue and the MatchFunction. Both can be used either as expression or
-as side-effect producing statement.
-
-MatchValue is a Value, obtained by `Match.of(...)`. In this case a Match is terminated with `get()`, `getOrElse()`, etc.
-
-[source,java,indent=0]
-----
-Match.of(1)
-     .whenType(String.class).then(s -> "String " + s)
-     .whenType(Number.class).then(n -> "Number " + n)
-     .whenType(Integer.class).then(i -> "int " + i)
-     .getOrElse("unknown");
-----
-
-MatchFunction is a Function, obtained by one of `Match.whenXxx(...)`. In this case a Match is terminated by applying it to an object, e.g.
-
-[source,java,indent=0]
-----
-Match.when(...).then(...).otherwise(...).apply(o);
-----
-
-A MatchFunction is a reusable Match, i.e. it may be applied to different objects.
-Example of a Match as partial function:
-
-[source,java,indent=0]
-----
-Match<Number> toNumber = Match.as(Number.class)
-     .whenType(Integer.class).then(i -> i)
-     .whenType(String.class).then(s -> new BigDecimal(s));
-Number number = toNumber.apply(1.0d); // throws a MatchError
-----
-
-Example of a Match as total function:
-
-[source,java,indent=0]
-----
-Match<Number> toNumber = Match.as(Number.class)
-     .whenType(Integer.class).then(i -> i)
-     .whenType(String.class).then(s -> new BigDecimal(s));
-     .otherwise(-1)
-     .apply(1.0d); // result: -1
-----
-
-Javaslang's pattern matching feature goes far beyond Java's switch.
-
-[source,java]
-----
-Stream.of(0, 1, 2, 3, 13, 14, null, -1)
-        .peek(n -> out.print(format("%d -> ", n)))
-        .map(Match.as(Object.class) // Match function (with apply(Object))
-                .when(Objects::isNull).then("!")
-                .whenIs(0).then("zero")
-                .whenIsIn(1, 13, 14).then(i -> "first digit 1: " + i)
-                .whenType(Double.class).then(d -> "Found a double: " + d)
-                .whenApplicable((Number num) -> "number: " + num).thenApply()
-                .otherwise(() -> "no match"))
-        .map(MatchingTest::toString)
-        .forEach(out::println);
-out.flush(); // Avoid mixing sout and serr
-
-// Match monad (with map(), flatMap(), get(), orElse(), orElseGet(), orElseThrow(), etc.)
-for (String s : Match.of(0)
-        .whenType(Number.class).then(Object::toString)
-        .otherwise("unknown")
-        .map(String::toUpperCase)) {
-    out.println(s);
-}
-----
-
-Javaslang allows to match more special objects by more general cases:
-
-[source,java]
-----
-// Match as Value
-Match.of(new Some<>(1))
-     .whenApplicable((Option i) -> true).thenApply()
-     .get(); // = true
-
-Match.of(new Some<>(1))
-     .whenType(Option.class).then(true)
-     .get(); // = true
-
-// Match as Function
-Match.whenApplicable((Option i) -> true).thenApply()
-     .apply(new Some<>(1)); // = true
-
-Match.whenType(Option.class).then(true)
-     .apply(new Some<>(1)); // = true
-----
-
-The opposite is also possible, to match more general objects by more special cases:
-
-[source,java]
-----
-// Match as Value
-Match.of(Option.of(1))
-     .whenIs(new Some<>(1)).then(true)
-     .get(); // = true
-
-// Match as Function
-Match.whenIs(new Some<>(1)).then(true)
-     .apply(Option.of(1)); // = true
-----
-
-Match can be also used to perform side-effects instead of returning values. This is not recommended in general. However, real world Java programs contain side-effects.
-
-For example let us consider a method which prints output to the console:
-
-[source,java,indent=0]
-----
-include::../../test/java/javaslang/MatchDemo.java[tags=effect]
-----
-
-Then there are two ways to use `Match` to print a match result, either as `MatchValue` effect or as `MatchFunction` effect.
-
-The `MatchValue` effect is not reusable. A value is matched and at the same time the an effect takes place:
-
-[source,java,indent=0]
-----
-include::../../test/java/javaslang/MatchDemo.java[tags=matchValueAsEffect]
-----
-
-The `MatchFunction` effect is reusable. It is a `Consumer` which performs the effect when applied to an object:
-
-[source,java,indent=0]
-----
-include::../../test/java/javaslang/MatchDemo.java[tags=matchFunctionAsEffect]
-----
-
-Both versions of effect performing matches result in nothing, i.e. `void`.
-
-Here is a complete overview over the whole Match syntax:
-
-image::images/match.png[Pattern Matching]
-
 ==== Validation
 The Validation control is an _applicative functor_, and facilitates accumulating errors. When trying to compose Monads, the combination process will short circuit at the first encountered error. But 'Validation' will continue processing the combining functions, accumulating all errors. This is especially useful when doing validation of multiple fields, say a web form, and you want to know all errors encountered, instead of one at a time.
 
@@ -456,7 +307,7 @@ Stream.from(1).filter(i -> i % 2 == 0);
 
 === Property Checking
 
-Property checking (also known as http://en.wikipedia.org/wiki/Property_testing[property testing]) is a truly powerful way to test properties of our code in a functional way. It is based on __http://javaslang.com/#[arbitrarily]__ generated random data, which is passed to a user defined check function.
+Property checking (also known as http://en.wikipedia.org/wiki/Property_testing[property testing]) is a truly powerful way to test properties of our code in a functional way. It is based on generated random data, which is passed to a user defined check function.
 
 [source,java]
 ----
