--- a/src/docs/asciidoc/getting_started.adoc
+++ b/src/docs/asciidoc/getting_started.adoc
@@ -10,7 +10,7 @@ The .jar is available at http://search.maven.org/#search%7Cga%7C1%7Ca:%22javasla
 [subs="attributes"]
 ----
 dependencies {
-    compile "com.javaslang:javaslang:{project-version}"
+    compile "io.javaslang:javaslang:{project-version}"
 }
 ----
 
@@ -20,9 +20,9 @@ dependencies {
 ----
 <dependencies>
     <dependency>
-        <groupId>com.javaslang</groupId>
+        <groupId>io.javaslang</groupId>
         <artifactId>javaslang</artifactId>
-        <version>2.0.0-RC4</version>
+        <version>2.0.0</version>
     </dependency>
 </dependencies>
 ----
