--- a/src/docs/asciidoc/pattern_matching.adoc
+++ b/src/docs/asciidoc/pattern_matching.adoc
@@ -14,7 +14,7 @@ val s = i match {
 
 Notably __match__ is an expression, it yields a result. Furthermore it offers
 
-*   object deconstruction ``case Some(1) => "one"``
+*   object deconstruction ``case Some(i) => i``
 *   named parameters ``case i: Int => "Int " + i``
 *   guards ``case Some(i) if i > 0 => "positive " + i``
 *   multiple conditions ``case "-h" | "--help" => displayHelp``
