--- a/src/docs/asciidoc/introduction.adoc
+++ b/src/docs/asciidoc/introduction.adoc
@@ -1,6 +1,6 @@
 == Introduction
 
-Javaslang is a functional library for Java 8+ that provides persistent data types and functional control structures. 
+Javaslang is a functional library for Java 8+ that provides persistent data types and functional control structures.
 
 === Functional Data Structures in Java 8 with Javaslang
 
@@ -20,7 +20,7 @@ Before we deep-dive into the details about the data structures I want to talk ab
 
 Java applications are typically plentiful of https://en.wikipedia.org/wiki/Side_effect_(computer_science)[side-effects]. They mutate some sort of state, maybe the outer world. Common side effects are changing objects or variables __in place__, printing to the console, writing to a log file or to a database. Side-effects are considered __harmful__ if they affect the semantics of our program in an undesirable way.
 
-For example, if a function throws an exception and this exception is__interpreted__, it is considered as side-effect that __affects our program__. Furthermore http://c2.com/cgi/wiki?DontUseExceptionsForFlowControl[exceptions are like non-local goto-statements]. They break the normal control-flow. However, real-world applications do perform side-effects.
+For example, if a function throws an exception and this exception is __interpreted__, it is considered as side-effect that __affects our program__. Furthermore http://c2.com/cgi/wiki?DontUseExceptionsForFlowControl[exceptions are like non-local goto-statements]. They break the normal control-flow. However, real-world applications do perform side-effects.
 
 [source,java]
 ----
@@ -36,7 +36,7 @@ In a functional setting we are in the favorable situation to encapsulate the sid
 [source,java]
 ----
 // = Success(result) or Failure(exception)
-Try divide(Integer dividend, Integer divisor) {
+Try<Integer> divide(Integer dividend, Integer divisor) {
     return Try.of(() -> dividend / divisor);
 }
 
@@ -160,7 +160,7 @@ In fact the linked List can also be used to implement a Queue data structure.
 
 ==== Queue
 
-A very efficient functional Queue can be implemented based on two linked Lists. The __front__ List holds the elements that are __dequeued__, the __rear__List holds the elements that are __enqueued__. Both operations enqueue and dequeue perform in O(1).
+A very efficient functional Queue can be implemented based on two linked Lists. The __front__ List holds the elements that are __dequeued__, the __rear__ List holds the elements that are __enqueued__. Both operations enqueue and dequeue perform in O(1).
 
 [source,java]
 ----
@@ -181,10 +181,10 @@ When dequeueing an element we get a pair of the first element and the remaining 
 
 [source,java]
 ----
-Queue queue = Queue.of(1, 2, 3);
+Queue<Integer> queue = Queue.of(1, 2, 3);
 
 // = (1, Queue(2, 3))
-Tuple2<Integer, Queue> dequeued =
+Tuple2<Integer, Queue<Integer>> dequeued =
         queue.dequeue();
 ----
 
@@ -204,17 +204,17 @@ An optional result may be further processed, regardless if it is empty or not.
 [source,java]
 ----
 // = Queue(1)
-Queue queue = Queue.of(1);
+Queue<Integer> queue = Queue.of(1);
 
 // = Some((1, Queue()))
-Option<Tuple2<Integer, Queue>> dequeued =
+Option<Tuple2<Integer, Queue<Integer>>> dequeued =
         queue.dequeueOption();
 
 // = Some(1)
-Option element = dequeued.map(Tuple2::_1);
+Option<Integer> element = dequeued.map(Tuple2::_1);
 
 // = Some(Queue())
-Option<Queue> remaining =
+Option<Queue<Integer>> remaining =
         dequeued.map(Tuple2::_2);
 ----
 
@@ -240,7 +240,7 @@ Searches on such trees run in O(log n) time. We start the search at the root and
 SortedSet<Integer> set = TreeSet.of(2, 3, 1, 2);
 
 // = TreeSet(3, 2, 1);
-Comparator c = (a, b) -> b - a;
+Comparator<Integer> c = (a, b) -> b - a;
 SortedSet<Integer> reversed = TreeSet.of(c, 2, 3, 1, 2);
 ----
 
@@ -388,4 +388,3 @@ List.of('a', 'b', 'c').zipWithIndex();
 ----
 
 At Javaslang, we explore and test our library by implementing the https://projecteuler.net/archives[99 Euler Problems]. It is a great proof of concept. Please don’t hesitate to send pull requests.
-
