--- a/src/docs/asciidoc/usage_guide.adoc
+++ b/src/docs/asciidoc/usage_guide.adoc
@@ -96,7 +96,7 @@ include::../../test/java/javaslang/FunctionsDemo.java[tags=composeFunctions2]
 ----
 
 ==== Lifting
-You can lift a partial function into a total function that returns an `Option` result. The term _partial function_ comes from mathematics. A partial function from X to Y is a function f: X′ → Y, for some subset X′ of X. It generalizes the concept of a function f: X → Y by not forcing f to map every element of X to an element of Y. That means a partial function works properly only for some input values. If the function is called with a disallowed input values, it will typically throw an exception.
+You can lift a partial function into a total function that returns an `Option` result. The term _partial function_ comes from mathematics. A partial function from X to Y is a function f: X′ → Y, for some subset X′ of X. It generalizes the concept of a function f: X → Y by not forcing f to map every element of X to an element of Y. That means a partial function works properly only for some input values. If the function is called with a disallowed input value, it will typically throw an exception.
 
 The following method `divide` is a partial function that only accepts non-zero divisors.
 
@@ -211,13 +211,14 @@ If the result of compute() is Right(1), the value is Right(2).
 If the result of compute() is Left("error"), the value is Left("error").
 
 ==== Future
-A Future is a computation result that becomes available at some point. All operations provided are non-blocking.
-The underlying ExecutorService is used to execute asynchronous handlers, e.g. via onComplete(...).
+A Future is a computation result that becomes available at some point. All operations provided are non-blocking. The underlying ExecutorService is used to execute asynchronous handlers, e.g. via onComplete(...).
 
 A Future has two states: pending and completed.
 
-Pending: The computation is ongoing. Only a pending future may be completed or cancelled.
-Completed: The computation finished successfully with a result, failed with an exception or was cancelled.
+*Pending:* The computation is ongoing. Only a pending future may be completed or cancelled.
+
+*Completed:* The computation finished successfully with a result, failed with an exception or was cancelled.
+
 Callbacks may be registered on a Future at each point of time. These actions are performed as soon as the Future is completed. An action which is registered on a completed Future is immediately performed. The action may run on a separate Thread, depending on the underlying ExecutorService. Actions which are registered on a cancelled Future are performed with the failed result.
 
 [source,java,indent=0]
@@ -227,7 +228,7 @@ Future<T> future = Future.of(...);
 ----
 
 ==== Validation
-The Validation control is an _applicative functor_, and facilitates accumulating errors. When trying to compose Monads, the combination process will short circuit at the first encountered error. But 'Validation' will continue processing the combining functions, accumulating all errors. This is especially useful when doing validation of multiple fields, say a web form, and you want to know all errors encountered, instead of one at a time.
+The Validation control is an _applicative functor_ and facilitates accumulating errors. When trying to compose Monads, the combination process will short circuit at the first encountered error. But 'Validation' will continue processing the combining functions, accumulating all errors. This is especially useful when doing validation of multiple fields, say a web form, and you want to know all errors encountered, instead of one at a time.
 
 Example: We get the fields 'name' and 'age' from a web form and want to create either a valid Person instance, or return the list of validation errors.
 
@@ -321,4 +322,3 @@ Property.def("square(int) >= 0")
 ----
 
 Generators of complex data structures are composed of simple generators.
-
