--- a/src/docs/asciidoc/usage_guide.adoc
+++ b/src/docs/asciidoc/usage_guide.adoc
@@ -191,6 +191,51 @@ Option is a monadic container type which represents an optional value. Instances
 Option<T> option = Option.of(...);
 ----
 
+If you're coming to Javaslang after using Java's `Optional` class, there is a crucial difference.  In `Optional`, a call to `.map` that results in a null will result in an empty `Optional`.  In Javaslang, it would result in a `Some(null)` that can then lead to a `NullPointerException`.
+
+Using `Optional`, this scenario is valid.
+
+[source,java,indent=0]
+----
+include::../../test/java/javaslang/OptionDemo.java[tags=javaOptionalWithMappedNull]
+----
+<1> The option is `Some("foo")`
+<2> The resulting option becomes empty here
+
+Using Javaslang's `Option`, the same scenario will result in a `NullPointerException`.
+
+[source,java,indent=0]
+----
+include::../../test/java/javaslang/OptionDemo.java[tags=javaslangOptionWithMappedNull]
+----
+<1> The option is `Some("foo")`
+<2> The resulting option is `Some(null)`
+<3> The call to `s.toUpperCase()` is invoked on a `null`
+
+This seems like Javaslang's implementation is broken, but in fact it's not - rather, it adheres to the requirement of a monad to maintain computational context when calling `.map`.  In terms of an `Option`, this means that calling `.map` on a `Some` will result in a `Some`, and calling `.map` on a `None` will result in a `None`.  In the Java `Optional` example above, that context changed from a `Some` to a `None`.
+
+This may seem to make `Option` useless, but it actually forces you to pay attention to possible occurrences of `null` and deal with them accordingly instead of unknowingly accepting them.  The correct way to deal with occurrences of `null` is to use `flatMap`.
+
+[source,java,indent=0]
+----
+include::../../test/java/javaslang/OptionDemo.java[tags=flatMapNullParameter]
+----
+<1> The option is `Some("foo")`
+<2> The resulting option is `Some(null)`
+<3> `s`, which is `null`, becomes `None`
+
+Alternatively, move the `.flatMap` to be co-located with the the possibly `null` value.
+
+[source,java,indent=0]
+----
+include::../../test/java/javaslang/OptionDemo.java[tags=mapOptionParameter]
+----
+<1> The option is `Some("foo")`
+<2> The resulting option is `None`
+<3> This step never occurs because the option is a `None`
+
+This is explored in more detail on the http://blog.javaslang.io/the-agonizing-death-of-an-astronaut/[Javaslang blog].
+
 ==== Try
 Try is a monadic container type which represents a computation that may either result in an exception, or return a successfully computed value. It's similar to, but semantically different from `Either`. Instances of Try, are either an instance of `Success` or `Failure`.
 
